[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Rocky Roads/sign.png" type="Texture" id=1]
[ext_resource path="res://Scripts/tip.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 9.25 )

[node name="tip" type="Area2D"]
collision_layer = 1024
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 27 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 20 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_tip_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_tip_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
